--- a/index.html
+++ b/index.html
@@ -3,16 +3,81 @@
 <head>
   <meta charset="UTF-8">
   <title>Privacy Policy</title>
+
+  <style>
+    html, body{
+      background:#fff;
+      margin:0;
+      padding:0;
+      font-family:Arial;
+      line-height:1.6;
+    }
+    .container{
+      max-width:800px;
+      margin:0 auto;
+      padding:20px;
+    }
+    .topbar{
+      position:sticky;
+      top:0;
+      background:#fff;
+      padding:12px 0;
+      border-bottom:1px solid rgba(0,0,0,.08);
+      z-index:10;
+    }
+    .back-btn{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      padding:10px 14px;
+      border-radius:10px;
+      border:1px solid rgba(0,0,0,.12);
+      background:#f6f6f6;
+      color:#111;
+      text-decoration:none;
+      font-size:14px;
+      cursor:pointer;
+      user-select:none;
+      -webkit-tap-highlight-color: transparent;
+    }
+    .back-btn:active{
+      transform:scale(0.98);
+      background:#ededed;
+    }
+    .arrow{
+      font-size:18px;
+      line-height:1;
+    }
+  </style>
+
+  <script>
+    function closeInCreator(){
+      // 触发 Creator 拦截
+      window.location.href = "cocos://closeWebView";
+    }
+  </script>
 </head>
-<body style="max-width:800px;margin:auto;font-family:Arial;line-height:1.6;">
-  <h1>Privacy Policy</h1>
 
-  <p>This app does not collect, store, or share any personal data.</p>
+<body>
+  <div class="container">
 
-  <p>We do not require users to create an account and we do not access contacts,
-  location, photos, microphone, camera, or any other personal information.</p>
+    <div class="topbar">
+      <a class="back-btn" onclick="closeInCreator()">
+        <span class="arrow">←</span>
+        <span>Back</span>
+      </a>
+    </div>
 
-  <p>If you have any questions, please contact us at:</p>
-  <p><strong>annahello901@163.com</strong></p>
+    <h1>Privacy Policy</h1>
+
+    <p>This app does not collect, store, or share any personal data.</p>
+
+    <p>We do not require users to create an account and we do not access contacts,
+      location, photos, microphone, camera, or any other personal information.</p>
+
+    <p>If you have any questions, please contact us at:</p>
+    <p><strong>annahello901@163.com</strong></p>
+
+  </div>
 </body>
 </html>
